chat-server 플러그인 추가

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -115,7 +115,12 @@ services:
       discovery-service:
         condition: service_healthy
     restart: always
-
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    restart: always
+    command: >
+      sh -c "rabbitmq-plugins enable --offline rabbitmq_management rabbitmq_stomp rabbitmq_web_stomp &&
+             rabbitmq-server"
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
