--- a/chat-service/src/main/resources/application.yml
+++ b/chat-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: chat-service
   config:
-    import: "optional:config-service:8888"
+    import: "configserver:http://config-service:8888"
   main:
     allow-bean-definition-overriding: true
   data:
