--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -10,9 +10,8 @@ spring:
         cors-configurations:
           "[/**]": # 모든 경로에 대한 CORS 설정
             allowed-origins:
-              - "http://localhost:3000" # 허용할 클라이언트 도메인
-              - "https://jiangxy.github.io"
-              - "http://localhost:3000"
+              - "http://homelesscode.shop" # 허용할 클라이언트 도메인
+              - "https://homelesscode.shop" # 허용할 클라이언트 도메인
               # - 나중에 도메인
             allowed-methods:
               - GET
