--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -128,6 +128,7 @@ security:
     - /api/v1/users/callback
     - /ws/info
     - /ws/**
+    - api/v1/users/password
     - /oauth2/authorization/**
     - /login/oauth2/code/**
     - /oauth2/**
